[tool.poetry]
name = "pygplib"
version = "2.0.0"
description = "Python First-Order Graph Property Library"
authors = ["Takahisa Toda <todat@acm.org>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/toda-lab/pygplib"
keywords = [
    "logic",
    "first-order-logic",
    "graph",
    "sat-solver",
    "satisfiability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

include = [
  "docs",
  "data",
  "tests",
  "examples",
  "tox.ini",
]

exclude = [
  "docs/_build",
]

[tool.poetry.dependencies]
python = "^3.9"
pyparsing = "^3.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
tox = "^4.11.3"
Sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
python-sat = "^0.1.8.dev10"
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

