[tool.poetry]
name = "pygplib"
version = "2.0.0"
description = "Python First-Order Graph Property Library"
authors = ["Takahisa Toda <pygplib+contact@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/toda-lab/pygplib"
documentation = "https://pygplib.readthedocs.io/en/latest/"
keywords = [
    "logic",
    "first-order-logic",
    "graph",
    "sat-solver",
    "satisfiability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.9"
pyparsing = "^3.1.1"
sphinx-removed-in = "^0.2.1"
sphinxcontrib-trio = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
tox = "^4.11.3"
Sphinx = "^7.2.6"
pallets-sphinx-themes = "^2.1.1"
python-sat = "^0.1.8.dev10"
argparse = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

