[tool.poetry]
name = "pygplib"
version = "2.0.1"
description = "Python First-Order Graph Property Library"
authors = ["Takahisa Toda <pygplib+contact@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/toda-lab/pygplib"
documentation = "https://pygplib.readthedocs.io/en/latest/"
keywords = [
    "logic",
    "first-order-logic",
    "graph",
    "sat-solver",
    "satisfiability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.9"
pyparsing = "^3.1.1"

pytest = { version ="^7.4.2", optional = true }
pytest-cov = { version = "^4.1.0", optional = true }
tox = { version = "^4.11.3", optional = true }
python-sat = { version = "^0.1.8.dev10", optional = true }
argparse = { version = "^1.4.0", optional = true }
Sphinx = { version = "^7.2.6", optional = true }
sphinx-removed-in = { version = "^0.2.1", optional = true }
sphinxcontrib-trio = { version = "^1.1.2", optional = true }
pallets-sphinx-themes = { version = "^2.1.1", optional= true }

[tool.poetry.extras]
test = ["pytest", "pytest-cov", "tox", "python-sat", "argparse"]
docs = ["Sphinx", "sphinx-removed-in", "sphinxcontrib-trio", "pallets-sphinx-themes"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

